Fix errorprone warnings.